2004-09-29  Ethan Merritt  <merritt@u.washington.edu>
	* demo/all.dem:  Remove vector.dem again, since it turns out that it
	breaks for any terminal type whose default value of 'set output' is
	not the current display.

	* demo/world2.dem: Set font explicitly to "Helvetica,7", since some
	terminal drivers do not like the partial font spec ",7".

2004-09-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c (df_show_binary): In fprintf(), use "%f" not "%lf" for
	doubles.

2004-09-27  Ethan Merritt  <merritt@u.washington.edu>

	* demo/airfoil.dem demo/fillcrvs.dem demo/histograms.dem
	demo/histograms2.dem demo/spline.dem demo/world.dem:
	Replace all instances of outdated syntax, i.e. everything that causes
	errors or warnings if BACKWARDS_COMPATIBLE is not defined.

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots): Wrap the code
	which interprets bare line+point types with #ifdef BACKWARDS_COMPATIBLE
	(e.g. plot 'foo' with linespoints 3 4).

2004-09-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Fix typo in a #define from the previous massive
	whitespace changes.

	* config/config.os2: Let #define STDC_HEADERS 1.

2004-09-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (eval_3dplots): Fix logic of default arrow style in the
	case of splot with vectors.

2004-09-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c src/util3d.h: Add a text_label pointer to the p_vertex
	structure in order to support labels in hidden3d mode.

	* hidden3d.c (build_networks draw_vertex): Add code to handle plot style
	"with labels" in hidden3d mode.

	* demo/world2.dem demo/srl.dat: New demo to show use of labels with pm3d
	colors and hidden3d mode.

	* demo/all.dem demo/Makefile.am.in: Add vector.dem and world2.dem.

2004-09-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (get_offsets place_labels) src/graphics.h:
	Simplify place_labels by calling a new shared routine.